alteraçoes nas posiçoes e ediçao de imagens

--- a/index.html
+++ b/index.html
@@ -8,115 +8,173 @@
   </head>
   <body>
     <div class="container">
-      <div class="tema">
-        <h1>LOREM IPSUM</h1>
+      <div class="titulos-tema" id="edit-tema">
+        <h1>MODA</h1>
+        <div class="color" id="edit-cor"></div>
+      </div>
+      <div class="div-meio">
+        <div class="txt-meio">
+          <h2>Lorem Ipsum</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
+            posuere libero purus, eget molestie risus imperdiet ac. Morbi at dui
+            tortor. Duis et sodales erat. Donec non nisi pharetra est faucibus
+            gravida. Aenean vulputate risus ut metus pretium tempor. Nulla
+            mattis vestibulum convallis. Quisque neque ante, faucibus sed orci
+            non, tristique ultrices magna. Vestibulum cursus dictum ex, non
+            facilisis augue blandit id.</p>
+        </div>
+        <div class="img-meio">
+          <img src="./assets/img/mocos_conversando.jpeg" alt="img">
+        </div>
+      </div>
+      <div class="titulos-tema">
+        <h1>VIAGENS</h1>
+        <div class="color" id="edit-cor2"></div>
+      </div>
+      <div class="infos infos2">
+        <div class="dicas-fernando">
+          <div class="imgs" id="div-viagens">
+            <img src="./assets/img/praia_1.jpeg" alt="foto-aleatoria" />
+          </div>
+          <div class="sub2">
+            <h2>Lorem ipsum</h2>
+          </div>
+          <div class="autor">
+            <h3>Por: fernando rezende</h3>
+          </div>
+        </div>
+        <div class="dicas-fernando">
+          <div class="imgs" id="div-viagens">
+            <img src="./assets/img/praia_2.jpeg" alt="foto-aleatoria" />
+          </div>
+          <div class="sub2">
+            <h2>Lorem ipsum</h2>
+          </div>
+          <div class="autor">
+            <h3>Por: fernando rezende</h3>
+          </div>
+        </div>
+        <div class="dicas-fernando">
+          <div class="imgs" id="div-viagens">
+            <img src="./assets/img/praia_1.jpeg" alt="foto-aleatoria" />
+          </div>
+          <div class="sub2">
+            <h2>Lorem ipsum</h2>
+          </div>  
+          <div class="autor">
+            <h3>Por: fernando rezende</h3>
+          </div>
+        </div>
+        <div class="dicas-fernando">
+          <div class="imgs" id="div-viagens">
+            <img src="./assets/img/praia_2.jpeg" alt="foto-aleatoria" />
+          </div>
+          <div class="sub2">
+            <h2>Lorem ipsum</h2>
+          </div>
+          <div class="autor">
+            <h3>Por: fernando rezende</h3>
+          </div>
+        </div>
+      </div>
+      <div class="titulos-tema">
+        <h1>night</h1>
         <div class="color"></div>
       </div>
       <div class="infos">
-        <div class="infos-fernando">
+        <div class="dicas-fernando">
           <div class="imgs">
-            <img src="./assets/img/foto-aleatoria.jpg" alt="foto-aleatoria" />
-          </div>
-          <div class="subtitulo-txt">
-            <h2>lorem ipsum</h2>
+            <img class="imgs-inicio" src="./assets/img/ibiza.jpeg" alt="foto-aleatoria" />
+            <div class="subtitulo-txt">
+              <h2>Lorem ipsum</h2>
+            </div>
           </div>
           <div class="txt">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
               posuere libero purus, eget molestie risus imperdiet ac. Morbi at dui
-              tortor. Duis et sodales erat. Donec non nisi pharetra est faucibus
-              gravida. Aenean vulputate risus ut metus pretium tempor. Nulla
-              mattis vestibulum convallis. Quisque neque ante, faucibus sed orci
-              non, tristique ultrices magna. Vestibulum cursus dictum ex, non
-              facilisis augue blandit id. Donec maximus vel arcu ac lobortis.
-              Vivamus mattis sodales dolor, sed vehicula purus consectetur nec.
-              Morbi dictum turpis nec tortor auctor, eget lobortis lorem
-              fermentum. Proin et dolor cursus, blandit dui nec, ornare sapien.
-              Sed sit amet venenatis ligula. Aliquam quam ligula, viverra a
-              volutpat nec, blandit finibus tortor. Morbi eu risus sit amet erat
-              rhoncus mattis in vel lectus. Curabitur ac accumsan sapien.
-              Pellentesque vel iaculis quam. Vestibulum pharetra lorem ut porta
-              cursus. Sed facilisis lobortis quam, a euismod lacus sollicitudin
-              ut. Morbi vehicula leo non ex tempus, in cursus nulla fringilla.
-              Proin feugiat congue nibh vitae interdum. Pellentesque tincidunt sed
-              leo vitae pellentesque. Sed pulvinar sagittis justo vitae mollis.
-              Integer sodales fermentum dui vel semper.
-            </p>
+              tortor. Duis et sodales erat.
           </div>
-          <div class="autor">
-            <h3>Por: fernando rezende</h3>
-          </div>
-          <button class="edit-btn">Ver mais</button>
         </div>
-        <div class="infos-fernando">
+        <div class="dicas-fernando">
           <div class="imgs">
-            <img src="./assets/img/foto-aleatoria.jpg" alt="foto-aleatoria" />
-          </div>
-          <div class="subtitulo-txt">
-            <h2>lorem ipsum</h2>
+            <img class="imgs-inicio" src="./assets/img/dj_aleatorio.jpeg" alt="foto-aleatoria" />
+            <div class="subtitulo-txt">
+              <h2>Lorem ipsum</h2>
+            </div>
           </div>
           <div class="txt">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
               posuere libero purus, eget molestie risus imperdiet ac. Morbi at dui
-              tortor. Duis et sodales erat. Donec non nisi pharetra est faucibus
-              gravida. Aenean vulputate risus ut metus pretium tempor. Nulla
-              mattis vestibulum convallis. Quisque neque ante, faucibus sed orci
-              non, tristique ultrices magna. Vestibulum cursus dictum ex, non
-              facilisis augue blandit id. Donec maximus vel arcu ac lobortis.
-              Vivamus mattis sodales dolor, sed vehicula purus consectetur nec.
-              Morbi dictum turpis nec tortor auctor, eget lobortis lorem
-              fermentum. Proin et dolor cursus, blandit dui nec, ornare sapien.
-              Sed sit amet venenatis ligula. Aliquam quam ligula, viverra a
-              volutpat nec, blandit finibus tortor. Morbi eu risus sit amet erat
-              rhoncus mattis in vel lectus. Curabitur ac accumsan sapien.
-              Pellentesque vel iaculis quam. Vestibulum pharetra lorem ut porta
-              cursus. Sed facilisis lobortis quam, a euismod lacus sollicitudin
-              ut. Morbi vehicula leo non ex tempus, in cursus nulla fringilla.
-              Proin feugiat congue nibh vitae interdum. Pellentesque tincidunt sed
-              leo vitae pellentesque. Sed pulvinar sagittis justo vitae mollis.
-              Integer sodales fermentum dui vel semper.
+              tortor. Duis et sodales erat.
             </p>
           </div>
-          <div class="autor">
-            <h3>Por: fernando rezende</h3>
-          </div>
-          <button class="edit-btn">Ver mais</button>
         </div>
-        <div class="infos-fernando">
+        <div class="dicas-fernando">
           <div class="imgs">
-            <img src="./assets/img/foto-aleatoria.jpg" alt="foto-aleatoria" />
-          </div>
-          <div class="subtitulo-txt">
-            <h2>lorem ipsum</h2>
+            <img class="imgs-inicio" src="./assets/img/balada_aleatoria.jpeg" alt="foto-aleatoria" />
+            <div class="subtitulo-txt">
+              <h2>Lorem ipsum</h2>
+            </div>
           </div>
           <div class="txt">
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
               posuere libero purus, eget molestie risus imperdiet ac. Morbi at dui
-              tortor. Duis et sodales erat. Donec non nisi pharetra est faucibus
-              gravida. Aenean vulputate risus ut metus pretium tempor. Nulla
-              mattis vestibulum convallis. Quisque neque ante, faucibus sed orci
-              non, tristique ultrices magna. Vestibulum cursus dictum ex, non
-              facilisis augue blandit id. Donec maximus vel arcu ac lobortis.
-              Vivamus mattis sodales dolor, sed vehicula purus consectetur nec.
-              Morbi dictum turpis nec tortor auctor, eget lobortis lorem
-              fermentum. Proin et dolor cursus, blandit dui nec, ornare sapien.
-              Sed sit amet venenatis ligula. Aliquam quam ligula, viverra a
-              volutpat nec, blandit finibus tortor. Morbi eu risus sit amet erat
-              rhoncus mattis in vel lectus. Curabitur ac accumsan sapien.
-              Pellentesque vel iaculis quam. Vestibulum pharetra lorem ut porta
-              cursus. Sed facilisis lobortis quam, a euismod lacus sollicitudin
-              ut. Morbi vehicula leo non ex tempus, in cursus nulla fringilla.
-              Proin feugiat congue nibh vitae interdum. Pellentesque tincidunt sed
-              leo vitae pellentesque. Sed pulvinar sagittis justo vitae mollis.
-              Integer sodales fermentum dui vel semper.
+              tortor. Duis et sodales erat.
             </p>
+          </div>
+        </div>
+      </div>
+      <div class="titulos-tema">
+        <h1>RESTAURANTES & hoteis</h1>
+        <div class="color" id="edit-cor2"></div>
+      </div>
+      <div class="infos infos2">
+        <div class="dicas-fernando">
+          <div class="imgs">
+            <img src="./assets/img/restaurante_1.jpeg" alt="foto-aleatoria" />
+          </div>
+          <div class="sub2">
+            <h2>Lorem ipsum</h2>
           </div>
           <div class="autor">
             <h3>Por: fernando rezende</h3>
           </div>
-          <button class="edit-btn">Ver mais</button>
+        </div>
+        <div class="dicas-fernando">
+          <div class="imgs">
+            <img src="./assets/img/restaurante_2.jpeg" alt="foto-aleatoria" />
+          </div>
+          <div class="sub2">
+            <h2>Lorem ipsum</h2>
+          </div>
+          <div class="autor">
+            <h3>Por: fernando rezende</h3>
+          </div>
+        </div>
+        <div class="dicas-fernando">
+          <div class="imgs">
+            <img src="./assets/img/restaurante_3.jpg" alt="foto-aleatoria" />
+          </div>
+          <div class="sub2">
+            <h2>Lorem ipsum</h2>
+          </div>  
+          <div class="autor">
+            <h3>Por: fernando rezende</h3>
+          </div>
+        </div>
+        <div class="dicas-fernando">
+          <div class="imgs">
+            <img src="./assets/img/restaurante_4.webp" alt="foto-aleatoria" />
+          </div>
+          <div class="sub2">
+            <h2>Lorem ipsum</h2>
+          </div>
+          <div class="autor">
+            <h3>Por: fernando rezende</h3>
+          </div>
         </div>
       </div>
     </div>
