(finalizando os comentarios)

--- a/index.html
+++ b/index.html
@@ -3,164 +3,164 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Dicas do Fernado | home</title>
   </head>
   <body>
+    <!--========================-->
+    <!--Inicio da div sobre container-->
     <div class="container">
+      <!--========================-->
+      <!--Inicio da div sobre Moda-->
       <div class="titulos-tema" id="edit-tema">
         <h1>MODA</h1>
-        <div class="color" id="edit-cor"></div>
+        <div class="color"></div>
       </div>
-      <div class="div-meio">
-        <div class="txt-meio">
-          <h2>Lorem Ipsum</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-            posuere libero purus, eget molestie risus imperdiet ac. Morbi at dui
-            tortor. Duis et sodales erat. Donec non nisi pharetra est faucibus
-            gravida. Aenean vulputate risus ut metus pretium tempor. Nulla
-            mattis vestibulum convallis. Quisque neque ante, faucibus sed orci
-            non, tristique ultrices magna. Vestibulum cursus dictum ex, non
-            facilisis augue blandit id.</p>
+      <div class="div-moda">
+        <!--========================-->
+        <!--Inicio da div texto da div moda-->
+        <div class="txt-moda">
+          <h2>Tendências do homem moderno</h2>
+          <p>
+            O homem moderno está cada vez mais arrojado e adepto ao mundo da
+            moda. Essa vaidade se deu por conta do estilo que cada um tem, e da
+            maneira de encarar a vida despretensiosamente. A graça de tudo isso,
+            é ver o público masculino apostando numa nova maneira de compor seus
+            looks --que cá entre nós-- estão arrasadores. E você: se considera
+            um homem bem arrumado?
+          </p>
         </div>
-        <div class="img-meio">
-          <img src="./assets/img/mocos_conversando.jpeg" alt="img">
+        <!--FIm da div texto da div moda-->
+        <!--========================-->
+        <div class="img-moda">
+          <img src="./assets/img/mocos_conversando.jpeg" alt="img" />
         </div>
       </div>
+      <!--Fim da div sobre Moda-->
+      <!--========================-->
+      <!--Inicio da div sobre viagens-->
       <div class="titulos-tema">
         <h1>VIAGENS</h1>
-        <div class="color" id="edit-cor2"></div>
+        <div class="color"></div>
       </div>
       <div class="infos infos2">
         <div class="dicas-fernando">
-          <div class="imgs" id="div-viagens">
-            <img src="./assets/img/praia_1.jpeg" alt="foto-aleatoria" />
+          <div class="imgs">
+            <img src="./assets/img/lancha.jpeg" alt="foto-aleatoria" />
           </div>
           <div class="sub2">
-            <h2>Lorem ipsum</h2>
+            <h2>Para aproveitar de verdade</h2>
           </div>
           <div class="autor">
             <h3>Por: fernando rezende</h3>
           </div>
         </div>
         <div class="dicas-fernando">
-          <div class="imgs" id="div-viagens">
-            <img src="./assets/img/praia_2.jpeg" alt="foto-aleatoria" />
+          <div class="imgs">
+            <img src="./assets/img/praia.jpeg" alt="foto-aleatoria" />
           </div>
           <div class="sub2">
-            <h2>Lorem ipsum</h2>
+            <h2>O paraíso é aqui</h2>
           </div>
           <div class="autor">
             <h3>Por: fernando rezende</h3>
           </div>
         </div>
         <div class="dicas-fernando">
-          <div class="imgs" id="div-viagens">
-            <img src="./assets/img/praia_1.jpeg" alt="foto-aleatoria" />
+          <div class="imgs">
+            <img src="./assets/img/lancha_2.jpeg" alt="foto-aleatoria" />
           </div>
           <div class="sub2">
-            <h2>Lorem ipsum</h2>
-          </div>  
+            <h2>Viva uma nova experiência</h2>
+          </div>
           <div class="autor">
             <h3>Por: fernando rezende</h3>
           </div>
         </div>
         <div class="dicas-fernando">
-          <div class="imgs" id="div-viagens">
-            <img src="./assets/img/praia_2.jpeg" alt="foto-aleatoria" />
+          <div class="imgs">
+            <img src="./assets/img/praia2.jpeg" alt="foto-aleatoria" />
           </div>
           <div class="sub2">
-            <h2>Lorem ipsum</h2>
+            <h2>Sombra e água fresca</h2>
           </div>
           <div class="autor">
             <h3>Por: fernando rezende</h3>
           </div>
         </div>
       </div>
+      <!--Fim da div sobre Viagens-->
+      <!--========================-->
+      <!--Inicio da div sobre noite-->
       <div class="titulos-tema">
-        <h1>night</h1>
+        <h1>noite</h1>
         <div class="color"></div>
       </div>
       <div class="infos">
         <div class="dicas-fernando">
           <div class="imgs">
-            <img class="imgs-inicio" src="./assets/img/ibiza.jpeg" alt="foto-aleatoria" />
+            <img
+              class="imgs-inicio"
+              src="./assets/img/sp.jpeg"
+              alt="foto-aleatoria"
+            />
             <div class="subtitulo-txt">
-              <h2>Lorem ipsum</h2>
+              <h2>SP– Capital que nunca dorme</h2>
             </div>
-          </div>
-          <div class="txt">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-              posuere libero purus, eget molestie risus imperdiet ac. Morbi at dui
-              tortor. Duis et sodales erat.
           </div>
         </div>
         <div class="dicas-fernando">
           <div class="imgs">
-            <img class="imgs-inicio" src="./assets/img/dj_aleatorio.jpeg" alt="foto-aleatoria" />
+            <img
+              class="imgs-inicio"
+              id="rio"
+              src="./assets/img/ibiza.jpeg"
+              alt="foto-aleatoria"
+            />
             <div class="subtitulo-txt">
-              <h2>Lorem ipsum</h2>
+              <h2>Rio – A Cidade quente</h2>
             </div>
-          </div>
-          <div class="txt">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-              posuere libero purus, eget molestie risus imperdiet ac. Morbi at dui
-              tortor. Duis et sodales erat.
-            </p>
           </div>
         </div>
         <div class="dicas-fernando">
           <div class="imgs">
-            <img class="imgs-inicio" src="./assets/img/balada_aleatoria.jpeg" alt="foto-aleatoria" />
+            <img
+              class="imgs-inicio"
+              src="./assets/img/floripa_2.jpeg"
+              alt="foto-aleatoria"
+            />
             <div class="subtitulo-txt">
-              <h2>Lorem ipsum</h2>
+              <h2>Floripa – Noites sofisticadas</h2>
             </div>
-          </div>
-          <div class="txt">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc
-              posuere libero purus, eget molestie risus imperdiet ac. Morbi at dui
-              tortor. Duis et sodales erat.
-            </p>
           </div>
         </div>
       </div>
+      <!--Fim da div sobre noite-->
+      <!--========================-->
+      <!--Inicio da div sobre RESTAURANTES & hoteis-->
       <div class="titulos-tema">
         <h1>RESTAURANTES & hoteis</h1>
-        <div class="color" id="edit-cor2"></div>
+        <div class="color"></div>
       </div>
-      <div class="infos infos2">
+      <div class="infos infos2" id="final">
+        <div class="dicas-fernando">
+          <div class="imgs">
+            <img src="./assets/img/Hotel_marriott.jpg" alt="foto-aleatoria" />
+          </div>
+          <div class="sub2">
+            <h2>Hotel Marriott</h2>
+          </div>
+          <div class="autor">
+            <h3>Por: fernando rezende</h3>
+          </div>
+        </div>
         <div class="dicas-fernando">
           <div class="imgs">
             <img src="./assets/img/restaurante_1.jpeg" alt="foto-aleatoria" />
           </div>
           <div class="sub2">
-            <h2>Lorem ipsum</h2>
+            <h2>Restaurante Tio Dorp</h2>
           </div>
-          <div class="autor">
-            <h3>Por: fernando rezende</h3>
-          </div>
-        </div>
-        <div class="dicas-fernando">
-          <div class="imgs">
-            <img src="./assets/img/restaurante_2.jpeg" alt="foto-aleatoria" />
-          </div>
-          <div class="sub2">
-            <h2>Lorem ipsum</h2>
-          </div>
-          <div class="autor">
-            <h3>Por: fernando rezende</h3>
-          </div>
-        </div>
-        <div class="dicas-fernando">
-          <div class="imgs">
-            <img src="./assets/img/restaurante_3.jpg" alt="foto-aleatoria" />
-          </div>
-          <div class="sub2">
-            <h2>Lorem ipsum</h2>
-          </div>  
           <div class="autor">
             <h3>Por: fernando rezende</h3>
           </div>
@@ -176,7 +176,22 @@
             <h3>Por: fernando rezende</h3>
           </div>
         </div>
+        <div class="dicas-fernando">
+          <div class="imgs">
+            <img src="./assets/img/hotel_hilton.jpeg" alt="foto-aleatoria" />
+          </div>
+          <div class="sub2">
+            <h2>Hotel Hilton</h2>
+          </div>
+          <div class="autor">
+            <h3>Por: fernando rezende</h3>
+          </div>
+        </div>
       </div>
+      <!--fim da div sobre RESTAURANTES & hoteis-->
+      <!--========================-->
     </div>
+    <!--Fim da div sobre container-->
+    <!--========================-->
   </body>
 </html>
